# nfc-amiibo-win

./: .gitmodules  CMakeLists.txt  README.md  amiibo.cpp  amiitool.cpp  amiitool.h  nfchandler.cpp  nfchandler.h
